.gitignore.txtファイルを追加。home.htmlを記述

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 <body>
     <h1>2020年1月9日の復習</h1>
     <p>クセで2019と打ってしまう。→ 2020年になりました</p>
+    <div>学習したコード群</div>
+    <ol>
+        <li>git resert HEAD index.html ステージにあげたファイルを戻す</li>
+        <li>rm index.html ファイル削除</li>
+        <li>rm -r folder名　フォルダ削除</li>
+        <li>git commit --amend コミット内容の修正　※プッシュ後ファイルは禁止</li>
+        <li>git config --global alias.st status　※エイリアスの設定 ユーザー辞書登録</li>
+        <li>alius: st, cf, ci, br, co</li>
+        <li>git diff ※ファイルの中身で差分を見る</li>
+    </ol>
 </body>
 </html>
