本日の課題追加

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li>git config --global alias.st status　※エイリアスの設定 ユーザー辞書登録</li>
         <li>alius: st, cf, ci, br, co</li>
         <li>git diff ※ファイルの中身で差分を見る</li>
+        <li>cat inedex.html ファイルの中身を見る　※concatinate</li>
+        <li>複数のブランチ作成が上手くできない。。※本日の課題</li>
     </ol>
 </body>
 </html>
