--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
         <li>cat inedex.html ファイルの中身を見る　※concatinate</li>
         <li>複数のブランチ作成が上手くできない。。※本日の課題</li>
     </ol>
+    
+    <h2>2020年1月10日の学習<h2>
+        <ol>
+            <li>git pull　※github上のデータをとってくる<li>
+        </ol>
 </body>
 </html>
