--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h2>2020年1月10日の学習<h2>
         <ol>
             <li>git pull　※github上のデータをとってくる<li>
+            <li>git mergeの勉強中 21時<li>
         </ol>
 </body>
 </html>
