フローを追記

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             <li>git status ※ローカルの状態を確認。最新にコミットし、push</li>
             <li>git pull origin master※githubの状態を合わせる</li>
             <li>git checkout -b github_flow ※新しいブランチを作成し、移動</li>
+            <li>ファイルを変更</li>
+            <li>git diff 変更内容を確認</li>
         </ol>    
 
 
