--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>ブランチとリモートの違いがわからない ※本日の課題</li>
         </ol>
         <p>夜の学習分</p>
+         <ol>
             <li>ブランチは最新のコミットをさすポインタ</li>
             <li>コミット内のparentで履歴をたどる</li>
             <li>複数作成（分岐）・マージ可能</li>
@@ -50,8 +51,9 @@
             <li>git remote -v ※リモートのURL一覧</li>
             <li>git remote rename master new_master ※リモート名の変更</li>
             <li>git remote rm new_master　※リモートの削除</li>
-
+        </ol>
             <p>ブランチ</p>
+            <ol>
             <li>git branch topic1 ※ブランチ名topic1を作成</li>
             <li>git log --oneline ※各ブランチがどのコミットを指しているか確認<br>
                 HEADの位置も確認 ※自分がいまいるブランチ
@@ -62,8 +64,9 @@
             <li>git branch -m topic2　※今いるブランチの名前変更。 -mはmove</li>
             <li>git branch -d topic2　※ブランチの削除（安全版 mergeされてない場合削除しない）</li>
             <li>git branch -D topic2 ※ブランチの削除(強制)</li>
-
+        </ol>
             <p>マージ</p>
+            <ol>
             <li>git maerge リモート名</li>
             <li>git merge リモート名/ブランチ名</li>
             <li>fastforward, automerge, conflict<br>
@@ -73,7 +76,10 @@
                     <li>conflict　※同一ファイル変更時に発生。元ファイル修正</li>
                 </ul>
             </li>
+        </ol>
+    
             <p>githubフロー</p>
+            <ol>
             <li>masterブランチを最新に更新 ※masterはリリースのみに使用。開発では使用しない</li>
             <li>開発用ブランチを作成 例topic1</li>
             <li>ファイルを変更</li>
@@ -86,9 +92,34 @@
             <li>masterをデプロイ　※本番環境へアップ</li>
             <li>ローカルのブランチをmasterに切り替え</li>
             <li>githubのmasterをローカルにコピー</li>
+        </ol>
 
         <h2>2020年1月11日の学習内容</h2>
-            
+        <p>githubフロー実践</p>
+        <ol>
+            <li>git branch ※今いるブランチを確認</li>
+            <li>git branch master※必要に応じてmasterに移動</li>
+            <li>git status ※ローカルの状態を確認。最新にコミットし、push</li>
+            <li>git pull origin master※githubの状態を合わせる</li>
+            <li>git checkout -b github_flow ※新しいブランチを作成し、移動</li>
+            <li>ファイルを変更</li>
+            <li>git diff ※変更内容を確認</li>
+            <li>git add .　※ステージに追加</li>
+            <li>git commit -v ※コミット =git ci -m ""</li>
+            <li>git push origin github_flow ※githubにプッシュ</li>
+            <li>プルリクエストする　※github上での作業</li>
+            <li>reviewrの選択　※reviewの依頼</li>
+            <li>files changedタブから変更内容を確認</li>
+            <li>review changesでコメント／承認／変更依頼</li>
+            <li>conversationタブ -> confirm merge ※masterに統合</li>
+            <li>Delete branch ※confirm mergeの下に表示される</li>
+            <li>masterブランチをデプロイ</li>
+            <br>
+            <li>ローカルに移動</li>
+            <li>git checkout master ※masterに移動</li>
+            <li>git pull origin master ※githubの最新状態をmasterブランチにコピー</li>
+            <li>git branch -d git_flow　※開発終了したブランチを削除</li>
+        </ol>    
 
 
 
