fastforwardの内容を修正

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <li>git merge リモート名/ブランチ名</li>
             <li>fastforward, automerge, conflict<br>
                 <ul>
-                    <li>fastforward ※進んだ更新に合わせる。ポインタが前に一つ進むだけ</li>
-                    <li>automerge　※他のブランチと統合</li>
+                    <li>fastforward ※新しいコミットを作成しない。既存の最新コミットにポインタが移動</li>
+                    <li>automerge　※他のブランチと統合。新しいコミットを作成</li>
                     <li>conflict　※同一ファイル変更時に発生。元ファイル修正</li>
                 </ul>
             </li>
